--- a/src/component/cover/index.scss
+++ b/src/component/cover/index.scss
@@ -66,7 +66,7 @@
 
     .contact-info {
       display: grid;
-      grid-template-columns: 1fr 1fr 1fr; /* 관계 / 이름 / 아이콘 */
+      grid-template-columns: 8rem 7rem 1fr; /* 관계 / 이름 / 아이콘 */
       align-items: center;
       row-gap: 0.6rem;
       column-gap: 0.3rem;
